crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__disjoint_chain.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "nodes": [
      {
        "node": {
          "nodes": [
            {
              "lhs": {
                "name": "name",
                "type": "attr"
              },
              "op": "eq",
              "raw": "name = 'X'",
              "rhs": {
                "type": "string",
                "value": "X"
              },
              "type": "atom"
            },
            {
              "lhs": {
                "name": "name",
                "type": "attr"
              },
              "op": "eq",
              "raw": "name = 'Y'",
              "rhs": {
                "type": "string",
                "value": "Y"
              },
              "type": "atom"
            }
          ],
          "type": "and"
        },
        "type": "not"
      },
      {
        "node": {
          "nodes": [
            {
              "lhs": {
                "name": "name",
                "type": "attr"
              },
              "op": "eq",
              "raw": "name = 'X'",
              "rhs": {
                "type": "string",
                "value": "X"
              },
              "type": "atom"
            },
            {
              "lhs": {
                "name": "name",
                "type": "attr"
              },
              "op": "eq",
              "raw": "name = 'Z'",
              "rhs": {
                "type": "string",
                "value": "Z"
              },
              "type": "atom"
            }
          ],
          "type": "and"
        },
        "type": "not"
      },
      {
        "node": {
          "nodes": [
            {
              "lhs": {
                "name": "name",
                "type": "attr"
              },
              "op": "eq",
              "raw": "name = 'Y'",
              "rhs": {
                "type": "string",
                "value": "Y"
              },
              "type": "atom"
            },
            {
              "lhs": {
                "name": "name",
                "type": "attr"
              },
              "op": "eq",
              "raw": "name = 'Z'",
              "rhs": {
                "type": "string",
                "value": "Z"
              },
              "type": "atom"
            }
          ],
          "type": "and"
        },
        "type": "not"
      }
    ],
    "type": "and"
  }
}
