crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__disjoint_parenthesized_operands.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "node": {
      "nodes": [
        {
          "nodes": [
            {
              "lhs": {
                "name": "name",
                "type": "attr"
              },
              "op": "eq",
              "raw": "name = 'X'",
              "rhs": {
                "type": "string",
                "value": "X"
              },
              "type": "atom"
            },
            {
              "lhs": {
                "name": "name",
                "type": "attr"
              },
              "op": "eq",
              "raw": "name = 'Y'",
              "rhs": {
                "type": "string",
                "value": "Y"
              },
              "type": "atom"
            }
          ],
          "type": "or"
        },
        {
          "nodes": [
            {
              "lhs": {
                "name": "kind",
                "type": "attr"
              },
              "op": "eq",
              "raw": "kind = 'class'",
              "rhs": {
                "type": "string",
                "value": "class"
              },
              "type": "atom"
            },
            {
              "lhs": {
                "expr": {
                  "name": "lines",
                  "type": "projection"
                },
                "type": "number"
              },
              "op": "le",
              "raw": "lines <= 10",
              "rhs": {
                "expr": {
                  "type": "literal",
                  "value": 10.0
                },
                "type": "number"
              },
              "type": "atom"
            }
          ],
          "type": "and"
        }
      ],
      "type": "and"
    },
    "type": "not"
  }
}
