crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__empty_path_pattern.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `moniker ~ ''`: path pattern ``: empty path pattern",
  "input": "moniker ~ ''"
}
