crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__gini_count_ref_filter.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "expr": {
        "domain": {
          "kind": "field",
          "type": "children"
        },
        "expr": {
          "domain": {
            "type": "in_refs"
          },
          "filter": {
            "lhs": {
              "name": "source.parent",
              "type": "attr"
            },
            "op": "eq",
            "raw": "source.parent = target.parent",
            "rhs": {
              "name": "target.parent",
              "type": "projection"
            },
            "type": "atom"
          },
          "type": "count"
        },
        "kind": "gini",
        "percentile": null,
        "type": "aggregate"
      },
      "type": "number"
    },
    "op": "le",
    "raw": "gini(field, count(in_refs, source.parent = target.parent)) <= 0.7",
    "rhs": {
      "expr": {
        "type": "literal",
        "value": 0.7
      },
      "type": "number"
    },
    "type": "atom"
  }
}
